# fastapi_sqlaclhemy_boilerplate

./: .dockerignore  .env.template  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yml  entrypoint.sh  entrypoint_api.py  init.sql  main.py  migration.sh  pre-commit-config.yaml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 4b63ef282f36_create_users_table.py
app/: constants.py  containers.py
app/config/: config.py  database.py  utils.py
app/endpoints/: routers.py
app/models/: __init__.py  users.py
app/repositories/: abstract_repo.py
app/utils/: logging.py
src/: constants.py  main.py
src/config/: config.py  database.py  utils.py
src/dependecies/: db_session.py  jwt.py
src/endpoints/: routers.py
src/endpoints/v1/: test_endpoint.py  users.py
src/exceptions/: base_exceptions.py
src/models/: __init__.py  base.py  users.py
src/repositories/: abstract_repo.py  users.py
src/schemas/: users.py
src/services/: users.py
src/utils/: jwt.py  logging.py  password_hashing.py
