[tool.poetry]
name = "fastapi-sqlalchemy-boilerplate"
version = "0.1.0"
description = "FastAPI SQLAlchemy async boilerplate with configured migrations and admin panel"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "app"}, {include = "config"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"
alembic = "^1.12.1"
asyncpg = "^0.29.0"
psycopg2-binary = "^2.9.9"
sqladmin = "^0.15.0"
pydantic = "^2.5.0"
pydantic-settings = "^2.1.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
email-validator = "^2.1.0"
jinja2 = "^3.1.2"
watchfiles = "^0.21.0"
websockets = "^12.0"
wtforms = "^3.1.1"
orjson = "^3.9.10"
ujson = "^5.9.0"
httpx = "^0.25.2"
starlette = "^0.27.0"
anyio = "^3.7.1"
click = "^8.1.7"
dnspython = "^2.4.2"
greenlet = "^3.0.1"
h11 = "^0.14.0"
httpcore = "^1.0.2"
httptools = "^0.6.1"
idna = "^3.6"
itsdangerous = "^2.1.2"
mako = "^1.3.0"
markupsafe = "^2.1.3"
pyyaml = "^6.0.1"
sniffio = "^1.3.0"
typing-extensions = "^4.8.0"
certifi = "^2023.11.17"
pyodbc = "^5.2.0"
sqlmodel = "^0.0.24"
dependency-injector = "^4.48.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-asyncio = "^0.21.0"
black = "^23.0.0"
isort = "^5.12.0"
flake8 = "^6.0.0"
mypy = "^1.0.0"
pre-commit = "^3.6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["app", "config"]
known_third_party = ["fastapi", "sqlalchemy", "pydantic", "alembic"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
default_section = "THIRDPARTY"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "sqlalchemy.*",
    "alembic.*",
    "fastapi.*",
    "uvicorn.*",
    "pydantic.*",
    "pydantic_settings.*",
]
ignore_missing_imports = true

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    ".venv",
    "venv",
    "env",
    ".mypy_cache",
    ".pytest_cache",
    "build",
    "dist",
]
